samples/deep-validation/scripts/negative/const-reassign.ts
export function invalid(): int32 {
    const value: int32 = 5;
    value = 9;
    return value;
}
